# live-hajimatter

./: .devcontainer.json  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: pyproject.toml
backend/config/: settings.py  urls.py
backend/src/: admin.py  apps.py  models.py  urls.py  views.py
backend/src/management/commands/: grantsuperuser.py
backend/src/migrations/: 0001_create_users_table.py
backend/src/templates/: home.html  index.html
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue
frontend/src/components/: HelloWorld.vue
