[tool.poetry]
name = "live-hajimatter-backend"
version = "0.0.0"
description = "Live Hajimatter Backend"
authors = ["新篠ゆう <37145593+yuarasino@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
