[tool.poetry]
name = "live-hajimatter-backend"
version = "0.0.0"
description = "Live Hajimatter Backend"
authors = ["新篠ゆう <37145593+yuarasino@users.noreply.github.com>"]

[tool.poe.tasks]
dev = "python manage.py runserver 0.0.0.0:8000"
migrate = "python manage.py migrate"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.3"
django-environ = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
