[tool.poetry]
name = "live-hajimatter-backend"
version = "0.0.0"
description = "Live Hajimatter Backend"
authors = ["新篠ゆう <37145593+yuarasino@users.noreply.github.com>"]

[tool.poe.tasks]
dev = { shell = "python manage.py runserver 0.0.0.0:8000" }
migrate = { shell = "python manage.py migrate" }
lint = { shell = "pflake8 . && black --check . && isort --check-only ." }
fix = { shell = "black . && isort ." }

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.3"
django-environ = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pyproject-flake8 = "^5.0.4.post1"
black = "^22.10.0"
isort = "^5.10.1"

[tool.flake8]
max-line-length = 99
extend-ignore = ["E203"]
extend-exclude = [".venv"]

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
line_length = 99


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
